[package]
name = "sn_dbc_mint"
version = "0.1.0"
description = "a simple P2P Mint (CLI) for interactively using DBC"
authors = [ "dan-da@users.noreply.github.com" ]
license = "MIT OR BSD-3-Clause"
repository = "https://github.com/maidsafe/sn_dbc_mint"
edition = "2018"
publish = false

[[bin]]
name = "sn_dbc_mint"
path = "src/sn_dbc_mint.rs"

[dependencies]
log = "~0.4.8"
structopt = "~0.3.15"
#sn_dbc = {git="https://github.com/dan-da/sn_dbc", branch="serialize_things"}
sn_dbc = {path="/home/danda/dev/maidsafe/sn_dbc"}
#sn_dbc = "1.1.0"
anyhow = "1.0.40"
rustyline = "8.0.0"
serde = "1.0.126"
futures = "0.3.15"
qp2p = "0.11.9"
rand = "0.7.1"
bytes = "1.0.1"
crossbeam-channel = "0.5.1"
bls_dkg = "0.3.8"
base64 = "0.13.0"
bincode = "1.3.3"
threshold_crypto = "0.4.0"
xor_name = "1.2.0"


[dependencies.tokio]
version = "~1.2.0"
features = [ "full", "time" ]
