[package]
name = "sn_dbc_mint"
version = "0.1.0"
description = "a simple P2P Mint (CLI) for interactively using DBC"
authors = [ "dan-da@users.noreply.github.com" ]
license = "MIT OR BSD-3-Clause"
repository = "https://github.com/maidsafe/sn_dbc_mint"
edition = "2018"
publish = false

[[bin]]
name = "sn_dbc_mint"
path = "src/sn_dbc_mint.rs"

[dependencies]
log = "~0.4.8"
#sn_dbc = {git="https://github.com/dan-da/sn_dbc", branch="serializable_mint"}
#sn_dbc = {path="/home/danda/dev/maidsafe/sn_dbc"}
anyhow = "1.0.40"
rustyline = "8.0.0"
serde = "1.0.126"
rand = "0.7.1"
bytes = "1.0.1"
bincode = "1.3.3"
threshold_crypto = "0.4.0"
xor_name = "1.2.0"
hex = "0.4.3"
structopt = "0.3.21"
serde_derive = "1.0.126"
preferences-ron = "2.0.0"
sn_dbc = "1.6.6"
serde_json = {version="1.0.64", features=["preserve_order"]}



